fixed client dark mode

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -53,7 +53,7 @@ a:visited {
 }
 
 button {
-    background: #fff;
+    background: var(--light-gray);
     border: transparent solid 2px;
     outline: none;
     color: var(--button-color);
