--- a/src/css/map.css
+++ b/src/css/map.css
@@ -18,6 +18,5 @@
 header {
     padding: 20px;
     text-align: center;
-    background: white;
     font-size: 30px;
 }
